--- a/XFSamples/App.xaml
+++ b/XFSamples/App.xaml
@@ -4,8 +4,53 @@
              xmlns:prism="clr-namespace:Prism.DryIoc;assembly=Prism.DryIoc.Forms"
              x:Class="XFSamples.App">
 	<Application.Resources>
+        <ResourceDictionary>
+            
+            <!--#region Fonts-->
 
-		<!-- Application resource dictionary -->
+            <OnPlatform
+                x:TypeArguments="x:String"
+                x:Key="FABrands">
+                <On
+                    Platform="Android"
+                    Value="FontAwesome5Brands.otf#Regular"/>
+                <On
+                    Platform="iOS"
+                    Value="FontAwesome5Brands-Regular"/>
+            </OnPlatform>
 
+            <OnPlatform
+                x:TypeArguments="x:String"
+                x:Key="FASolid">
+                <On
+                    Platform="Android"
+                    Value="FontAwesome5Solid.otf#Regular"/>
+                <On
+                    Platform="iOS"
+                    Value="FontAwesome5Free-Solid"/>
+            </OnPlatform>
+
+            <OnPlatform
+                x:TypeArguments="x:String"
+                x:Key="FARegular">
+                <On
+                    Platform="Android"
+                    Value="FontAwesome5Regular.otf#Regular"/>
+                <On
+                    Platform="iOS"
+                    Value="FontAwesome5Free-Regular"/>
+            </OnPlatform>
+
+            <!--#endregion-->
+
+            <!--#region Colors-->
+
+            <Color x:Key="PrimaryColor">#ffffff</Color>
+            <Color x:Key="PrimaryDarkColor">#000000</Color>
+            <Color x:Key="AndroidBrandColor">#3DDC84</Color>
+            <Color x:Key="iOSBrandColor">#A3AAAE</Color>
+            <!--#endregion-->
+
+        </ResourceDictionary>
 	</Application.Resources>
 </prism:PrismApplication>
